# spbu-MSDTaT-fractal

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: cli.c  cli.h  fractal.c  fractal.h  image.c  image.h  main.c
